Clear button fixed & improvement of readability

--- a/style.css
+++ b/style.css
@@ -15,8 +15,11 @@ body {
     flex-direction: column;
 }
 
-h1 {
+p {
     text-align: center;
+    font-size: 80px;
+    margin-top: 40px;
+    margin-bottom: 20px;
 }
 
 .calculator {
